static/styles/zulip.css
/* ... */
/* Classes for hiding and showing controls */

.notdisplayed {
    display: none !important;
}

.notvisible {
    visibility: hidden !important;
    width: 0px !important;
    min-width: 0px !important;
    min-height: 0px !important;
    height: 0px !important;
    overflow: hidden !important;
    position: absolute !important;
}

/* Relative positioning */

.position-relative {
    position: relative;
}


/* Lighter strong */

strong {
    font-weight: 600;
}


/* Inline and block code */

code {
    /* 12/14 em, so bootstrap's default 12 px,
       when body is the default 14 px */
    font-size: 0.857em;
}

.codehilite {
    display: block !important;
    border: none !important;
    background: none !important;
}

.codehilite pre {
    width: 100%;
    margin-left: -5000px;
    position: relative;
    left: 5000px;
}

pre {
    /* 12/14 em, so bootstrap's default 12 px,
       when body is the default 14 px */
    font-size: 0.857em;
    line-height: inherit;
    white-space: pre;
    overflow-x: auto;
    word-wrap: normal;
    /* Bootstrap's default here is top: 0px, bottom: 10px */
    margin-top: 5px;
    margin-bottom: 5px;
}

pre code {
    white-space: pre;
}

/* Style inline code inside a link
   to look more like a normal link */
a code {
    color:        #08C;
    border-color: #08C;
}

a:hover code {
    color:        #005580;
    border-color: #005580;
}

.preserve_spaces {
    white-space: pre-wrap;
}

.sidebar-nav {
    padding: 0px 10px 20px 0px;
    margin-top: 1em;
    overflow: hidden;
    text-overflow: ellipsis;
    /* This is a little hacky, but for whatever reason, span2 in a row-fluid
       doesn't consistently take on the right width when it's in an affix, so
       we need to specify a max size. */
    max-width: 200px;
}

#left-sidebar .brand {
    display: table-row;
}

.edit-profile {
    font-weight: 300;
    font-size: 12px;
}


.logout {
    white-space: nowrap;
}

.new_message_button {
    padding-top: 1.1em;
}

.sidebar-title, .share-the-love-title {
    font-size: 11px;
    font-weight: normal;
    display: inline;
}


#streams_list:hover #streams_inline_cog {
   visibility: visible;
   opacity: 0.5;
}

#streams_list #streams_inline_cog:hover {
   opacity: 1.0;
}

#streams_inline_cog {
    float: right;
    color: #000;
    text-decoration: none;
    visibility: hidden;

    margin-top: 3px;
}

.tooltip {
    max-width: 10em;
}

#stream_filters {
    overflow-x: visible;
    overflow-y: hidden;
    margin: 2px 0px 0px 0px;
    padding: 0px 10px 10px 0;
}

#stream_filters .narrow-filter {
    padding-left: 1.5em;
}

.narrow-filter {
    display: block;
    position: relative;
}

#stream_filters:hover {
    overflow-y: auto;
}

#stream_filters li:hover {
    background-color: #e2e8dd;
}

#stream_filters li.active-subject-filter:hover {
    background-color: #ccd6cc;
}

#user_presences, #group-pms {
    list-style-position: inside; /* Draw the bullets inside our box */
    margin-left: 0;
    overflow-y:  hidden;
}
#user_presences:hover, #group-pms:hover {
    overflow-y: auto;
}

#user_presences li:hover, #group-pms li:hover {
    background-color: #e2e8dd;
}

#user_presences .user_sidebar_entry:hover, #group-pms .group-pms-sidebar-entry:hover {
    cursor: pointer;
}

#user_presences li {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.user_sidebar_entry .count, .group-pms-sidebar-entry .count {
    display: none;
}

#user_presences li, #group-pms li {
    list-style-type: none;
}

.user-status-indicator, .group-pm-status-indicator {
    display: block;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    border: 1px solid;
    float: left;
    position: relative;
    top: 5px;
    margin-right: 0.5em;
}

.user_active .user-status-indicator, .group-pm-status-indicator {
    background-color: #44C21D;
    border-color: #44C21D;
}

.user_idle .user-status-indicator {
    border-color: #EC7E18;
    background-color: #EC7E18;

    background: -moz-linear-gradient(top,  rgba(255,255,255,0) 50%, rgba(236,126,24,1) 50%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(50%,rgba(255,255,255,0)), color-stop(50%,rgba(236,126,24,1))); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 50%,rgba(236,126,24,1) 50%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  rgba(255,255,255,0) 50%,rgba(236,126,24,1) 50%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  rgba(255,255,255,0) 50%,rgba(236,126,24,1) 50%); /* IE10+ */
    background: linear-gradient(to bottom,  rgba(255,255,255,0) 50%,rgba(236,126,24,1) 50%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ec7e18',GradientType=0 ); /* IE6-9 */
}

.user_offline .user-status-indicator {
    background-color: none;
    border-color: gray;
}

#user_presences a, #group-pms a {
    color: #333;
}

#invite-user-link i {
    text-decoration: none;
    margin-right: 5px;
}

ul.filters {
    list-style-type: none;
}

.message_header_stream a.message_label_clickable,
ul.filters a {
    color: #333;
}

ul.filters hr {
    margin-top: 10px;
    margin-bottom: 10px;
}

li.active-filter,
li.active-subject-filter {
    font-weight: bold;
    background: #ccd6cc;
    position: relative;
}

li.active-filter:after,
li.active-subject-filter:after {
    content: "";
    position: absolute;
    top: 50%;
    right: -6px;
    margin-top: -6px;
    display: block;
    border-top: 6px solid transparent;
    border-bottom: 6px solid transparent;
    border-left: 6px solid #ccd6cc;
}

li.hidden-filter {
    visibility: hidden;
    display: none;
}

ul.filters {
    margin-left: 0px;
    padding-right: 10px;
}

#global_filters .global-filter {
    position: relative;
}

.user_sidebar_entry .selectable_sidebar_block,
.group-pms-sidebar-entry .selectable_sidebar_block {
    width: 170px;
    display: block;
}
/* ... */

