Fix the overflowing message pane issue.
(imported from commit 07f73e7a8d13792220f3ca08f50c21eb12d454b6)

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -261,13 +261,6 @@ code {
     background: none !important;
 }
 
-.codehilite pre {
-    width: 100%;
-    margin-left: -5000px;
-    position: relative;
-    left: 5000px;
-}
-
 pre {
     /* 12/14 em, so bootstrap's default 12 px,
        when body is the default 14 px */
@@ -1177,7 +1170,7 @@ table.compose_table {
 }
 
 div.focused_table {
-    display: table;
+    display: block;
 }
 
 .include-sender .message_content {
